try to commit from JupyterLab again

--- a/FIFA22_analysis_with_julia.ipynb
+++ b/FIFA22_analysis_with_julia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "e2cc8a03-7e88-45ea-b73e-ef1e490e8de8",
    "metadata": {},
    "outputs": [
@@ -10,48 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\yamti\\.julia\\registries\\General.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m InvertedIndices ─ v1.1.0\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m PooledArrays ──── v1.4.2\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m Crayons ───────── v4.1.1\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m Compat ────────── v3.46.0\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m DataFrames ────── v1.3.4\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m PrettyTables ──── v1.3.1\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\yamti\\.julia\\environments\\v1.8\\Project.toml`\n",
-      " \u001b[90m [a93c6f00] \u001b[39m\u001b[92m+ DataFrames v1.3.4\u001b[39m\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\yamti\\.julia\\environments\\v1.8\\Manifest.toml`\n",
-      "\u001b[33m⌅\u001b[39m\u001b[90m [34da2185] \u001b[39m\u001b[95m↓ Compat v4.2.0 ⇒ v3.46.0\u001b[39m\n",
-      " \u001b[90m [a8cc5b0e] \u001b[39m\u001b[92m+ Crayons v4.1.1\u001b[39m\n",
-      " \u001b[90m [a93c6f00] \u001b[39m\u001b[92m+ DataFrames v1.3.4\u001b[39m\n",
-      " \u001b[90m [41ab1584] \u001b[39m\u001b[92m+ InvertedIndices v1.1.0\u001b[39m\n",
-      " \u001b[90m [2dfb63ee] \u001b[39m\u001b[92m+ PooledArrays v1.4.2\u001b[39m\n",
-      " \u001b[90m [08abe8d2] \u001b[39m\u001b[92m+ PrettyTables v1.3.1\u001b[39m\n",
-      " \u001b[90m [8ba89e20] \u001b[39m\u001b[92m+ Distributed\u001b[39m\n",
-      " \u001b[90m [9fa8497b] \u001b[39m\u001b[92m+ Future\u001b[39m\n",
-      " \u001b[90m [1a1011a3] \u001b[39m\u001b[92m+ SharedArrays\u001b[39m\n",
-      "\u001b[36m\u001b[1m        Info\u001b[22m\u001b[39m Packages marked with \u001b[33m⌅\u001b[39m have new versions available but cannot be upgraded. To see why use `status --outdated -m`\n",
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
-      "\u001b[32m  ✓ \u001b[39m\u001b[90mInvertedIndices\u001b[39m\n",
-      "\u001b[32m  ✓ \u001b[39m\u001b[90mPooledArrays\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mCompat\u001b[39m\n",
-      "\u001b[32m  ✓ \u001b[39m\u001b[90mCrayons\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mChainRulesCore\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mChangesOfVariables\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mDataStructures\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mSortingAlgorithms\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mLogExpFunctions\u001b[39m\n",
-      "\u001b[32m  ✓ \u001b[39m\u001b[90mPrettyTables\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mStatsBase\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mSpecialFunctions\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mColorVectorSpace\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mColorSchemes\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mPlotUtils\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mRecipesPipeline\u001b[39m\n",
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mPlotThemes\u001b[39m\n",
-      "\u001b[32m  ✓ \u001b[39mDataFrames\n",
-      "\u001b[33m  ✓ \u001b[39mPlots\n",
-      "  19 dependencies successfully precompiled in 39 seconds. 134 already precompiled.\n",
-      "  \u001b[33m14\u001b[39m dependencies precompiled but different versions are currently loaded. Restart julia to access the new versions\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\yamti\\.julia\\environments\\v1.8\\Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\yamti\\.julia\\environments\\v1.8\\Manifest.toml`\n"
      ]
     }
    ],
@@ -61,7 +23,8 @@
     "using Colors\n",
     "# Pkg.add(\"Plots\")\n",
     "using Plots\n",
-    "Pkg.add(\"DataFrames\")"
+    "# Pkg.add(\"DataFrames\")\n",
+    "using DataFrames"
    ]
   },
   {
