--- a/FIFA22_analysis_with_julia.ipynb
+++ b/FIFA22_analysis_with_julia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "e2cc8a03-7e88-45ea-b73e-ef1e490e8de8",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "# Pkg.add(\"Plots\")\n",
     "# Pkg.add(\"DataFrames\")\n",
     "# Pkg.add(\"CSV\")\n",
-    "\n",
+    "# Pkg.add(\"XLSX\")\n",
     "\n",
     "using Colors\n",
     "using Plots\n",
     "using DataFrames\n",
-    "using CSV"
+    "using CSV\n",
+    "using XLSX"
    ]
   },
   {
@@ -32,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "6243df5c-7c55-4621-98cb-a91a6edc2360",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"C:\\\\Users\\\\yamti\\\\Documents\\\\julia_projects\\\\FIFA22-analysis-with-julia\\\\archive\""
+       "\"C:\\\\Users\\\\yamti\\\\Documents\\\\julia_projects\\\\FIFA22-analysis-with-julia\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0f5aac56-36af-4418-84a7-c78ff5332ff5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2fbb165d-8db9-4457-becf-8bad36e7e0e6",
    "metadata": {},
    "outputs": [
@@ -73,7 +74,7 @@
        "\"C:\\\\Users\\\\yamti\\\\Documents\\\\julia_projects\\\\FIFA22-analysis-with-julia\\\\archive\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ffa9a045-a3f8-4f5e-b289-86727d017332",
    "metadata": {},
    "outputs": [
@@ -111,7 +112,7 @@
        " \"players_22.csv\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,38 +122,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e091129d-7401-4a4b-b0c4-835816a02ddc",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "fa4ed115-82d4-484c-89ae-5922f8025ed2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: file not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: file not defined",
-      "",
-      "Stacktrace:",
-      " [1] getproperty(x::Module, f::Symbol)",
-      "   @ Base .\\Base.jl:31",
-      " [2] top-level scope",
-      "   @ In[22]:1",
-      " [3] eval",
-      "   @ .\\boot.jl:368 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1428"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV.File\n"
      ]
     }
    ],
    "source": [
-    "CSV.file(\"players_15.csv\")"
+    "csv_reader = CSV.File(\"players_15.csv\")\n",
+    "println(typeof(csv_reader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3353ac73-9521-402d-86ec-8dcc7c03b1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = CSV.File(\"players_15.csv\") |> DataFrame\n",
+    "\n",
+    "# player_url + sofifa_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cf4241ba-fdfa-4292-8e0c-d800eefd8ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XLSXFile(\"Career Mode player datasets - FIFA 15-22.xlsx\") containing 8 Worksheets\n",
+       "            sheetname size          range        \n",
+       "-------------------------------------------------\n",
+       "              FIFA 15 16156x110     A1:DF16156   \n",
+       "              FIFA 16 15624x110     A1:DF15624   \n",
+       "              FIFA 17 17597x110     A1:DF17597   \n",
+       "              FIFA 18 17955x110     A1:DF17955   \n",
+       "              FIFA 19 18086x110     A1:DF18086   \n",
+       "              FIFA 20 18484x110     A1:DF18484   \n",
+       "              FIFA 21 18945x110     A1:DF18945   \n",
+       "              FIFA 22 19240x110     A1:DF19240   \n"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xf = XLSX.readxlsx(\"Career Mode player datasets - FIFA 15-22.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5f82b26e-89f3-4af8-a3aa-b53f55abaa47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19240×110 XLSX.Worksheet: [\"FIFA 22\"](A1:DF19240) "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xf[\"FIFA 22\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3353ac73-9521-402d-86ec-8dcc7c03b1ae",
+   "id": "3f768f81-c4ac-4fe1-b139-81445d0783d8",
    "metadata": {},
    "outputs": [],
    "source": []
